# CFO-Agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ANTIGRAVITY.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  SECURITY.md  _watchdog_runner.py  analyze.py  atlas_tools.py  autonomous.py  backtest_scan.py  dashboard.py  docker-compose.yml  ecosystem.config.js  live_trade_service.py  main.py  paper_trade.py  paper_trade_service.py  pyproject.toml  requirements.txt  run_aggressive_test.py  run_backtests.py  run_comprehensive_validation.py  run_donchian_expansion.py  run_donchian_extended.py  run_forex_gold_test.py  run_fresh_gold_validation.py  run_gold_silver_backtest.py  run_live_scan.py  run_paper_sim.py  run_param_optimization.py  run_portfolio_winners.py  run_short_test.py  run_sm_test.py  run_smart_money_extended.py  run_stock_backtest.py  (+11 more)
agents/: INDEX.md  __init__.py  base_agent.py  behavioral-finance-guard.md  cashflow-monitor.md  compliance-auditor.md  darwinian.py  debugger.md  fundamentals_analyst.py  orchestrator.py  portfolio-analyst.md  portfolio_manager.py  research-analyst.md  sentiment_analyst.py  tax-strategist.md  technical_analyst.py  wealth-tracker.md
backtesting/: __init__.py  engine.py  monte_carlo.py  runner.py  walk_forward.py
brain/: AGENTS.md  AGENT_ORCHESTRATION.md  BRAIN_LOOP.md  BRANDS.md  CAPABILITIES.md  CFO_CANON.md  CFO_PULSE_CONTRACT.md  CHANGELOG.md  DASHBOARD.md  ENV_STRUCTURE.md  GROWTH.md  HEARTBEAT.md  INDEX.md  INTERACTION_PROTOCOL.md  OKRs.md  QUICK_REFERENCE.md  RESEARCH_FRONTIER.md  RISKS.md  SHARED_DB.md  SOUL.md  (+4 more)
(+341 files in other folders)
